--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -30,5 +32,29 @@
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
+  },
+  "prettier": {
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports",
+      "prettier-plugin-tailwindcss"
+    ],
+    "importOrder": [
+      "<THIRD_PARTY_MODULES>",
+      "interface",
+      "(?=content|api)",
+      "@context/",
+      "mock/",
+      "@config",
+      "@constants",
+      "@utils/",
+      "@hooks/",
+      "(@components/|./index)",
+      "(@pages/|./index)",
+      ".svg",
+      "^../(.*)$",
+      "(?=./styles.module.scss)"
+    ],
+    "importOrderSeparation": false,
+    "importOrderSortSpecifiers": true
   }
 }
